@@ -1,3 +1,8 @@
+2010-08-11  Richard Guenther  <rguenther@suse.de>
+
+	PR c/44555
+	* gcc.c-torture/execute/pr44555.c: New testcase.
+
 2010-06-13  Uros Bizjak  <ubizjak@gmail.com>
 
 	PR target/44481
